<resources>
    <string name="app_name">Register</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!--buttons-->
    <string name="btnregister">Register</string>
    <!--hints-->
    <string name="first">First Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
