<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.lavineoluoch.myapplication.register.RegisterActivity"
    android:background="#ff7e8b9a">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et"
        android:hint="@string/first"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et"
        android:hint="@string/surname"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et"
        android:hint="@string/username"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:inputType="textPassword"/>
    <CheckBox
        android:id="@+id/cbPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_marginBottom="10dp"
        android:checked="false"
        />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnregister"
        android:background="#ff44faff"
        android:textSize="15sp"
        android:textColor="#000000" />




</LinearLayout>
